@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - add option to restrict to a single gbs_plex to genotype_call_results_reporter
+
 release 69.2.0
  - the mqc skipper script is changed to always take into account the outcome
    of RoboQC assessment
